force-app/main/default/objects/Async_Job_Monitor__c/Async_Job_Monitor__c.object-meta.xml
<CustomObject>
    <label>OBS Async Job Monitor</label>
    <nameField>
        <displayFormat>Async_Job_Monitor-{000000}</displayFormat>
        <label>OBS Async Job Monitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OBS Async Job Monitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>