force-app/main/default/objects/Async_Job_Monitor__c/fields/Apex_Class__c.field-meta.xml
<CustomField><fullName>Apex_Class__c</fullName><label>OBS Apex Class</label><length>255</length><type>Text</type></CustomField>