force-app/main/default/objects/Async_Job_Monitor__c/fields/Created_Date__c.field-meta.xml
<CustomField><fullName>Created_Date__c</fullName><label>OBS Created Date</label><type>DateTime</type></CustomField>