force-app/main/default/objects/Async_Job_Monitor__c/fields/Errors__c.field-meta.xml
<CustomField><fullName>Errors__c</fullName><label>Errors</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>