force-app/main/default/objects/Async_Job_Monitor__c/fields/Job_Id__c.field-meta.xml
<CustomField><fullName>Job_Id__c</fullName><label>Job Id</label><length>18</length><type>Text</type></CustomField>