force-app/main/default/objects/Async_Job_Monitor__c/fields/Records_Processed__c.field-meta.xml
<CustomField><fullName>Records_Processed__c</fullName><label>OBS Records Processed</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>