force-app/main/default/objects/Async_Job_Monitor__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>OBS Status</label><length>80</length><type>Text</type></CustomField>